spacing correction

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
     inset: 0;
     backdrop-filter: blur(3rem);
     overflow-y: auto;
-    padding: 10rem 0 0 0;
+    padding: 15rem 0 0 0;
   }
 
 
